<resources>
    <string name="app_name">CORNULuc_Persistance_BDD-MySQL</string>
    <string name="name">Name</string>
    <string name="creer">Créer</string>
    <string name="login">Login</string>
    <string name="se_connecter">Se connecter</string>
    <string name="password">Password</string>
    <string name="mail">mail</string>
    <string name="settings">Settings</string>
    <string name="deconnection">Deconnection</string>
    <string name="localite">Localite</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="recherche">Recherche</string>
</resources>