<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RechercheActivity" >


    <LinearLayout
        android:id="@+id/linearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="@dimen/my_margin">

        <TextView
            android:id="@+id/textViewTextPersonNameSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextPersonNameSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewEmailSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail" />

        <EditText
            android:id="@+id/editTextEmailSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewLocaliteSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localite" />

        <EditText
            android:id="@+id/editTextLocaliteSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/localite"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recherche" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@+id/linearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_userlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>